--- a/src/components/widgets/Footer.astro
+++ b/src/components/widgets/Footer.astro
@@ -1,6 +1,6 @@
 ---
-import { Icon } from 'astro-icon/components';
-import { SITE } from '~/utils/config';
+import { Icon } from 'astro-icon/components'
+import { SITE } from '~/config.mjs';
 import { getHomePermalink } from '~/utils/permalinks';
 
 interface Link {
@@ -26,24 +26,28 @@ export interface Props {
 const { socialLinks = [], secondaryLinks = [], links = [], footNote = '', theme = 'light' } = Astro.props;
 ---
 
-<footer class:list={[{ dark: theme === 'dark' }, 'relative border-t border-gray-200 dark:border-slate-800 not-prose']}>
+<footer class:list={[{ dark: theme === 'dark' }, 'sticky top-[100vh] relative border-t border-gray-200 dark:border-slate-800']}>
   <div class="dark:bg-dark absolute inset-0 pointer-events-none" aria-hidden="true"></div>
   <div class="relative max-w-7xl mx-auto px-4 sm:px-6 dark:text-slate-300">
     <div class="grid grid-cols-12 gap-4 gap-y-8 sm:gap-8 py-8 md:py-12">
       <div class="col-span-12 lg:col-span-4">
         <div class="mb-2">
-          <a class="inline-block font-bold text-xl" href={getHomePermalink()}>{SITE?.name}</a>
+          <a class="inline-block font-bold" href={getHomePermalink()}>
+          <span class="self-center ml-0 text-xl md:text-l font-bold text-gray-900 whitespace-nowrap dark:text-white">
+            NimbleNews</span><span class="font-bold"></span></a>
         </div>
         <div class="text-sm text-muted">
-          {
+          <!-- {
             secondaryLinks.map(({ text, href }) => (
               <a
-                class="text-muted hover:text-gray-700 dark:text-gray-400 hover:underline transition duration-150 ease-in-out mr-2 rtl:mr-0 rtl:ml-2"
+                class="text-muted hover:text-gray-700 dark:text-gray-400 hover:underline transition duration-150 ease-in-out mr-2"
                 href={href}
                 set:html={text}
               />
             ))
-          }
+          } -->
+          <p>Trending news - Today</p>
+          <p>News + Speed + AI 😍</p>
         </div>
       </div>
       {
@@ -60,6 +64,7 @@ const { socialLinks = [], secondaryLinks = [], links = [], footNote = '', theme 
                       aria-label={ariaLabel}
                     >
                       <Fragment set:html={text} />
+                      
                     </a>
                   </li>
                 ))}
@@ -72,7 +77,7 @@ const { socialLinks = [], secondaryLinks = [], links = [], footNote = '', theme 
     <div class="md:flex md:items-center md:justify-between py-6 md:py-8">
       {
         socialLinks?.length ? (
-          <ul class="flex mb-4 md:order-1 -ml-2 md:ml-4 md:mb-0 rtl:ml-0 rtl:-mr-2 rtl:md:ml-0 rtl:md:mr-4">
+          <ul class="flex mb-4 md:order-1 -ml-2 md:ml-4 md:mb-0">
             {socialLinks.map(({ ariaLabel, href, text, icon }) => (
               <li>
                 <a
@@ -93,6 +98,7 @@ const { socialLinks = [], secondaryLinks = [], links = [], footNote = '', theme 
 
       <div class="text-sm mr-4 dark:text-slate-400">
         <Fragment set:html={footNote} />
+        今日
       </div>
     </div>
   </div>
