article page update 4

--- a/src/components/widgets/Footer.astro
+++ b/src/components/widgets/Footer.astro
@@ -47,7 +47,9 @@ const { socialLinks = [], secondaryLinks = [], links = [], footNote = '', theme 
             ))
           } -->
           <p>Trending news - Today</p>
-          <p>News + Speed + AI 😍</p>
+          <p>News in shortform 😍</p>
+          <p>News for a New Age</p>
+
         </div>
       </div>
       {
