Style fixes added subcategories

--- a/src/components/widgets/Header.astro
+++ b/src/components/widgets/Header.astro
@@ -86,9 +86,11 @@ const currentPath = `/${trimSlash(new URL(Astro.url).pathname)}`
             <li class={links?.length ? "dropdown" : ""}>
               {links?.length ? (
                 <>
-                  <button class="hover:text-link dark:hover:text-white px-4 py-3 flex items-center">
+                  <a class="hover:text-link dark:hover:text-white px-4 py-3 flex items-center"
+                  href={href} >
                     {text} <Icon name="tabler:chevron-down" class="w-3.5 h-3.5 ml-0.5 rtl:ml-0 rtl:mr-0.5 hidden md:inline" />
-                  </button>
+
+                  </a>
                   <ul class="dropdown-menu md:backdrop-blur-md dark:md:bg-dark rounded md:absolute pl-4 md:pl-0 md:hidden font-medium md:bg-white/90 md:min-w-[200px] drop-shadow-xl">
                     {links.map(({ text: text2, href: href2 }) => (
                       <li>
