--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import CallToAction from '~/components/widgets/CallToAction.astro';
 import HomeArticleGrid from '~/components/HomeArticleGrid.vue';
 
 const metadata = {
-  title: 'AstroWind — Free template for creating websites with Astro + Tailwind CSS',
+  title: 'NimbleNews - News Summarized Quickly',
   ignoreTitleTemplate: true,
 };
 ---
@@ -30,8 +30,7 @@ const metadata = {
 
   <Fragment slot="subtitle">
     <span class="hidden sm:inline">
-      <span class="font-semibold">NimbleNews brings you the trending news summarized quickly! Catch up on what's going on today faster than ever! Let's be honest most stories you just want the main points and could live without all the extras.
-    Keeping it super simple
+      <span class="font-semibold">NimbleNews brings you the trending news summarized quickly! Catch up on what's going on today faster than ever! Let's be honest, most stories you just want the main points and could live without all the extra fluff. Quick & simple.
   </Fragment>
 </Hero>
   <HomeArticleGrid client:load></HomeArticleGrid>
