--- a/src/components/widgets/Footer.astro
+++ b/src/components/widgets/Footer.astro
@@ -34,7 +34,7 @@ const { socialLinks = [], secondaryLinks = [], links = [], footNote = '', theme 
         <div class="mb-2">
           <a class="inline-block font-bold" href={getHomePermalink()}>
           <span class="self-center ml-0 text-xl md:text-l font-bold text-gray-900 whitespace-nowrap dark:text-white">
-            NimbleNews</span><span class="font-bold"></span></a>
+            ReportShorts</span><span class="font-bold"></span></a>
         </div>
         <div class="text-sm text-muted">
           <!-- {
