--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -27,7 +27,7 @@ const metadata = {
     </Fragment>
 
     <Fragment slot="subtitle">
-      At NimbleNews, we are taking the fluff out of regular everyday news. So you can stay current with what's happeneing without having to spend unecesssary time reading bloated news articles. So you can save time for the other things in your life.
+      At Reportshorts, we are taking the fluff out of regular everyday news. So you can stay current with what's happeneing without having to spend unecesssary time reading bloated news articles. So you can save time for the other things in your life.
     </Fragment>
   </Hero>
 
