--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -5,7 +5,7 @@ import { SITE } from '~/utils/config';
 <span class="flex items-center">
   <!-- Change size from w-16 h-16 to a smaller size like w-12 h-12 -->
   <div class="w-12 h-12 rounded-full overflow-hidden mr-2">
-    <img src="src/assets/images/logo.png" alt="Logo" class="object-cover w-full h-full"/>
+    <img src="images/rs_logo_even.png" alt="Logo" class="object-cover w-full h-full"/>
   </div>
   <span class="text-2xl md:text-xl font-bold text-gray-900 whitespace-nowrap dark:text-white">
     {SITE?.name}
