--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -37,26 +37,26 @@ const metadata = {
 
   <Features3
     title="Our Goals"
-    subtitle="Etiam scelerisque, enim eget vestibulum luctus, nibh mauris blandit nulla, nec vestibulum risus justo ut enim. Praesent lacinia diam et ante imperdiet euismod."
+    subtitle="We adhere to three main ideas."
     columns={3}
     isBeforeContent={true}
     items={[
       {
         title: 'Quick & Simple',
         description:
-          'Morbi faucibus luctus quam, sit amet aliquet felis tempor id. Cras augue massa, ornare quis dignissim a, molestie vel nulla.',
+          'Get the main story quickly. Less is more.',
         icon: 'tabler:template',
       },
       {
         title: 'Informative',
         description:
-          'Vivamus porttitor, tortor convallis aliquam pretium, turpis enim consectetur elit, vitae egestas purus erat ac nunc nulla.',
+          'While being shortened, still retaining the main points and still giving a concise story.',
         icon: 'tabler:template',
       },
       {
         title: 'Un-Biased',
         description:
-          'Duis sed lectus in nisl vehicula porttitor eget quis odio. Aliquam erat volutpat. Nulla eleifend nulla id sem fermentum.',
+          'Something we feel really strongly about, the news should have no manipulation or spin to it.',
         icon: 'tabler:template',
       },
     ]}
